tests/baselines/reference/computedPropertyNames21_ES5.errors.txt
computedPropertyNames21_ES5.ts(5,6): error TS2465: 'this' cannot be referenced in a computed property name.


==== computedPropertyNames21_ES5.ts (1 errors) ====
    class C {
        bar() {
            return 0;
        }
        [this.bar()]() { }
         ~~~~
!!! error TS2465: 'this' cannot be referenced in a computed property name.
    }